creating live json object based on form creator. Css fix to avoid overflow

--- a/sandy-disaster-recovery/assets/css/main.css
+++ b/sandy-disaster-recovery/assets/css/main.css
@@ -81,6 +81,10 @@ strong {
   margin: 0 auto;
   width:85%;
 }
+#tabs-2 {
+  margin: 0 auto;
+  width:90%;
+}
 span.icon {
   text-transform: none !important;
 }
